# ExperimentBoilerPlate

./: CMakeLists.txt  README.md
data/: btcusd.csv
src/: main.c
